--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buffer-crc32": "^0.2.13",
     "chownr": "^1.1.4",
     "concat-map": "^0.0.1",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "debug": "^4.3.4",
     "devtools-protocol": "^0.0.1019158",
@@ -47,6 +48,7 @@
     "pump": "^3.0.0",
     "puppeteer": "^16.1.1",
     "readable-stream": "^3.6.0",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "safe-buffer": "^5.2.1",
     "string_decoder": "^1.3.0",
