--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devtools-protocol": "^0.0.1019158",
     "end-of-stream": "^1.4.4",
     "express": "^4.18.1",
+    "express-handlebars": "^7.1.2",
     "extract-zip": "^2.0.1",
     "fd-slicer": "^1.1.0",
     "find-up": "^4.1.0",
@@ -26,6 +27,7 @@
     "fs.realpath": "^1.0.0",
     "get-stream": "^5.2.0",
     "glob": "^7.2.3",
+    "handlebars": "^4.7.8",
     "https-proxy-agent": "^5.0.1",
     "ieee754": "^1.2.1",
     "inflight": "^1.0.6",
