--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@netlify/functions": "^2.7.0",
+    "@types/express": "^4.17.21",
     "agent-base": "^6.0.2",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
@@ -18,7 +20,7 @@
     "debug": "^4.3.4",
     "devtools-protocol": "^0.0.1019158",
     "end-of-stream": "^1.4.4",
-    "express": "^4.18.1",
+    "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "extract-zip": "^2.0.1",
     "fd-slicer": "^1.1.0",
@@ -53,6 +55,7 @@
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "safe-buffer": "^5.2.1",
+    "serverless-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "tar-fs": "^2.1.1",
     "tar-stream": "^2.2.0",
