workaround: blocked by websites

--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
     "progress": "^2.0.3",
     "proxy-from-env": "^1.1.0",
     "pump": "^3.0.0",
-    "puppeteer": "^16.1.1",
+    "puppeteer": "^16.2.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "readable-stream": "^3.6.0",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
